# MutPep

./: README.md  pyproject.toml
mutpep/: __init__.py  mutpep.py  utills.py
mutpepgen/: __init__.py  mutpepgen.py
results/: analysis_summary.json  mutation_parsed_data.csv  mutation_peptides.fasta
