[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mutpepgen"
version = "1.0.0.dev0"
description = "Canimmune-Mutpep: Mutation-Derived Peptide Generator"
requires-python = ">=3.10"

dependencies = [
    "customtkinter>=5.2",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "Pillow>=10.0",
    "biopython>=1.81",
]

[project.optional-dependencies]
all = [
    "mutpepgen[gui]",
]
gui = [
    "customtkinter>=5.2",
    "Pillow>=10.0",
    "matplotlib>=3.7",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.scripts]
mutpepgen = "mutpepgen.mutpepgen:main"

[tool.setuptools.packages.find]
include = ["mutpepgen*"]

[tool.setuptools.package-data]
mutpepgen = ["*.json"]
